[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html2md"
version = "1.0.0"
description = "A fast CLI tool for converting HTML files to Markdown"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "html-to-markdown[lxml]>=1.6.0",
    "colorama>=0.4.4",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/html2md"
Repository = "https://github.com/yourusername/html2md"

[project.scripts]
html2md = "html2md.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["html2md*"]
